--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@remix-run/react": "*",
     "@remix-run/serve": "*",
     "@remix-run/server-runtime": "*",
+    "@types/uuid": "^8.3.4",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.3.2",
     "isbot": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
